--- a/pages/config/locales/en.yml
+++ b/pages/config/locales/en.yml
@@ -40,6 +40,8 @@ en:
           view_live_html: View this page live <br/><em>(opens in a new window)</em>
           hidden: hidden
           draft: draft
+        preview:
+          skip_to_first_child: "The page %{what} use the option \"Skip to first child\" and will never be displayed to guest users."
         form:
           preview: Preview
           preview_changes: Preview your changes before making them live
